# gecobench

./: .env.example  .gitignore  Create Datasets.ipynb  LICENSE  PlotExperimentation.ipynb  README.md  bert.py  cluster_config.json  cluster_job.sh  cluster_job_hydra_build.sh  cluster_job_hydra_cpu.sh  cluster_job_hydra_gpu.sh  cluster_job_hydra_gpu_run_prebuild.sh  cluster_job_slurm.sh  combine_xai_results.py  common.py  config_cluster.json  copy_data_to_cluster.sh  create_datasets_2 (1).ipynb  generate_data.py  get_results_from_cluster.sh  job_training.sh  ml_cluster_job_training.sh  nlp-apptainerfile.def  project_config.json  pyproject.toml  run_experiments.py  setup_experiment.py  submit.sh  test.ipynb  upload_code_to_cluster.py  utils.py
bias/: main.py  model_bias.py
configs/: data_config.json  gender_no_sub_samp_project_config.json  gender_project_config.json  gpt2_gender_no_sub_samp_project_config.json  sentiment_project_config.json
data/: main.py
dataset_generation/: create_dataset.ipynb
evaluation/: difference_testing.py  main.py
generate corpus/: code_subjects.ipynb  generate_original_phrases.ipynb
notebooks/: find_short_sentences.ipynb  get_accuracies_for_table.ipynb  get_avg_prediction_diff.ipynb  plot_dev.ipynb
scripts/: submit_hydra_job.py  submit_hydra_job.sh
training/: bert.py  bert_zero_shot.py  bert_zero_shot_utils.py  gpt2.py  gpt2_zero_shot.py  gpt2_zero_shot_utils.py  main.py  simple_model.py  sweep.py
visualization/: common.py  gender_difference.py  main.py  statistical_analysis.py
xai/: bert_explanations.py  main.py  methods.py
(+51 files in other folders)
