[tool.poetry]
name = "xai-nlp-benchmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "nlp_benchmark"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
torch = "^2.0.0"
spacy = "^3.5.1"
jupyterlab = "^3.6.3"
notebook = "^6.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
transformers = "^4.27.4"
pandas = "1.5.3"
paramiko = "^3.1.0"
loguru = "^0.6.0"
captum = "^0.6.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
